frontend/tests/cases/positive/evalInstanceCoeffectSum.gr
interface Sum a (c : Nat) where
  sum : a [c] -> a

data A = A

instance Sum A [n] where
  sum [A] = A
