frontend/tests/cases/negative/badArityTooManyArgsToFunInInstance.gr
interface Simple a where
  simple : a -> a

data A = A

-- too many arguments to 'simple'
instance Simple A where
  simple A A = A
